--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,3 +59,7 @@ main {
     margin-right: 0 !important;
   }
 }
+
+#root {
+  border-radius: 0 !important;
+}
